Bug 261295 - REGRESSION (UI-side compositing) Disabled scrollbars don't show in some cases
Summary: REGRESSION (UI-side compositing) Disabled scrollbars don't show in some cases
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: Safari 16
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikos Mouchtaris
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-07 14:52 PDT by Simon Fraser (smfr)
Modified: 2024-06-14 11:02 PDT (History)
3 users (show)

See Also:


Attachments
Test case (443 bytes, text/html)
2023-09-07 14:52 PDT, Simon Fraser (smfr)
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2023-09-07 14:52:07 PDT
Created attachment 467591 [details]
Test case

The attached test case shows that we fail to render disabled scrollbars. To reproduce, turn on always-on scrollbars in system preferences, then load the test case.

The test has overflow:scroll, which should always render the scrollbars, but because the content is not scrollable, they should appear disabled.
Comment 1 Radar WebKit Bug Importer 2023-09-07 14:52:29 PDT
<rdar://problem/115137778>
Comment 2 Nikos Mouchtaris 2023-10-25 13:08:33 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19561
Comment 3 EWS 2024-06-14 11:02:49 PDT
Committed 280026@main (5c367f97364c): <https://commits.webkit.org/280026@main>

Reviewed commits have been landed. Closing PR #19561 and removing active labels.