REGRESSION (UI-side compositing) Disabled scrollbars don't show in some cases https://bugs.webkit.org/show_bug.cgi?id=261295 rdar://115137778

Reviewed by NOBODY (OOPS!).

Create a temporary scroller imp in the web process to paint into specifically
for the scrollbar track on a disabled scrollbar, as we won't have a scrollbar layer
to paint into in the UI-process. This only affects legacy scrollbars. We also need to
keep an empty scroller imp for scrollable areas without overflow so that we can get the
ScrollbarsController notified when the scrollbar style changed, so we can also update the
size of the scrollable areas showing disabled scrollbars.

* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/WebCore/platform/ScrollbarsController.h:
(WebCore::ScrollbarsController::updateScrollerStyle):
(WebCore::ScrollbarsController::scrollbarsAreaDisabled):
* Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
(WebCore::setPaintCharacteristicsForScrollerImp):
(WebCore::ScrollbarThemeMac::setPaintCharacteristicsForScrollbar):
(WebCore::shouldCreateTemporaryScrollerImpForPainting):
(WebCore::scrollerImpForScrollbar):
(WebCore::paintScrollbar):
(WebCore::ScrollbarThemeMac::paint):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::updateScrollbarPresenceAndState):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollbarsController.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollbarsController.mm:
(-[WKScrollerImpPairDelegateDummy initWithScrollableArea:]):
(-[WKScrollerImpPairDelegateDummy invalidate]):
(-[WKScrollerImpPairDelegateDummy scrollerImpPair:updateScrollerStyleForNewRecommendedScrollerStyle:]):
(-[WKScrollerImpPairDelegateDummy contentAreaRectForScrollerImpPair:]):
(-[WKScrollerImpPairDelegateDummy inLiveResizeForScrollerImpPair:]):
(-[WKScrollerImpPairDelegateDummy mouseLocationInContentAreaForScrollerImpPair:]):
(-[WKScrollerImpPairDelegateDummy scrollerImpPair:convertContentPoint:toScrollerImp:]):
(-[WKScrollerImpPairDelegateDummy scrollerImpPair:setContentAreaNeedsDisplayInRect:]):
(WebKit::macScrollbarTheme):
(WebKit::RemoteScrollbarsController::updateScrollerStyle):
(WebKit::RemoteScrollbarsController::scrollbarsAreaDisabled):